--- a/menu4.html
+++ b/menu4.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title>À la française</title>
+    <title>Le délice des sens</title>
     <meta charset="UTF-8">
     <meta name="description" content="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,7 @@
     <link rel="icon" href="/MaquettesOhmyfood/images/logo/ohmyfood@2x.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style/css/menu.css">
+    <link rel="stylesheet" href="/sass/css/menu.css">
 
 </head>
 
@@ -22,15 +22,15 @@
         <a href="/index.html">
             <p class="header-p">Ohmyfood</p>
         </a>
-
     </header>
 
-    <img class="header-image" src="/MaquettesOhmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-        alt="À La française">
+    <img class="header-image"
+        src="/MaquettesOhmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+        alt="Le délice des sens">
 
     <main>
         <div class="main-titre-coeur">
-            <h1>À la française</h1>
+            <h1>Le délice des sens</h1>
             <i class="far fa-heart"></i>
         </div>
         <!-- section entrée -->
@@ -40,9 +40,9 @@
                 <h3>Entrées</h3>
                 <article class="menu-content delay-1">
                     <div class="menu-content-titre">
-                        <h4>Tartare de poulpe acidulé </h4>
+                        <h4>Tartare de thon</h4>
                         <div class="entree">
-                            <p>Aux zestes d'orange</p>
+                            <p>Assaisonné au yuzu </p>
                             <p class="prix">25€</p>
                         </div>
                     </div>
@@ -53,9 +53,9 @@
 
                 <article class="menu-content delay-2">
                     <div class="menu-content-titre">
-                        <h4>Velouté de légumes d'antan</h4>
+                        <h4>Bouchée de homard croustillant </h4>
                         <div class="entree">
-                            <p>Carotte, panais, topinambour</p>
+                            <p>Et sa farandole de petits légumes</p>
                             <p class="prix">35€</p>
                         </div>
                     </div>
@@ -66,9 +66,9 @@
 
                 <article class="menu-content delay-3">
                     <div class="menu-content-titre">
-                        <h4>Soupe à l'oignon </h4>
+                        <h4>Velouté de cèpes </h4>
                         <div class="entree">
-                            <p>Revisitée </p>
+                            <p>Aux truffes </p>
                             <p class="prix">20€</p>
                         </div>
                     </div>
@@ -77,6 +77,7 @@
                     </div>
                 </article>
             </div>
+
         </section>
 
         <!-- section plats -->
@@ -86,9 +87,9 @@
                 <h3>Plats</h3>
                 <article class="menu-content delay-4">
                     <div class="menu-content-titre">
-                        <h4>Coquilles Saint-Jacques</h4>
+                        <h4>Poulet rôti aux herbes de Provence </h4>
                         <div class="plat">
-                            <p>Accompagnées d'une purée de panais</p>
+                            <p>Et sa crème de truffe</p>
                             <p class="prix">40€</p>
                         </div>
                     </div>
@@ -99,9 +100,9 @@
 
                 <article class="menu-content delay-5">
                     <div class="menu-content-titre">
-                        <h4>Magret de canard</h4>
+                        <h4>Langouste rôtie </h4>
                         <div class="plat">
-                            <p>Et parmentier de pommes de terre</p>
+                            <p>Et ses légumes de saison</p>
                             <p class="prix">35€</p>
                         </div>
                     </div>
@@ -112,9 +113,9 @@
 
                 <article class="menu-content delay-6">
                     <div class="menu-content-titre">
-                        <h4>Pigeonneau d’Ille-et-Vilaine </h4>
+                        <h4>Côte de boeuf Angus </h4>
                         <div class="plat">
-                            <p>Sur son lit de gnocchis aux légumes</p>
+                            <p>Et sa purée de panais</p>
                             <p class="prix">44€</p>
                         </div>
                     </div>
@@ -136,9 +137,9 @@
                 <h3>Desserts</h3>
                 <article class="menu-content delay-7">
                     <div class="menu-content-titre">
-                        <h4>Pétales de violettes glacés</h4>
+                        <h4>Farandole de desserts</h4>
                         <div class="dessert">
-                            <p>Et purée de noisettes</p>
+                            <p>Du chef</p>
                             <p class="prix">18€</p>
                         </div>
                     </div>
@@ -149,9 +150,9 @@
 
                 <article class="menu-content delay-8">
                     <div class="menu-content-titre">
-                        <h4>Fondant au chocolat</h4>
+                        <h4>Crème brulée </h4>
                         <div class="dessert">
-                            <p>Revisité</p>
+                            <p>Revisitée</p>
                             <p class="prix">22€</p>
                         </div>
                     </div>
@@ -162,9 +163,9 @@
 
                 <article class="menu-content delay-9">
                     <div class="menu-content-titre">
-                        <h4>Millefeuille croustillant</h4>
+                        <h4>Tiramisu </h4>
                         <div class="dessert">
-                            <p>Myrtilles et pâte d’amande</p>
+                            <p>À la noisette</p>
                             <p class="prix">23€</p>
                         </div>
                     </div>
@@ -191,12 +192,6 @@
 
             </ul>
         </footer>
-
-
-
-
-
-
     </main>
 </body>
 
