--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="MaquettesOhmyfood/images/logo/ohmyfood@2x.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style/css/main.css" />
+    <link rel="stylesheet" href="/sass/css/main.css" />
 </head>
 
 
