--- a/menu1.html
+++ b/menu1.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="/MaquettesOhmyfood/images/logo/ohmyfood@2x.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style/css/menu.css">
+    <link rel="stylesheet" href="/sass/css/menu.css">
 </head>
 
 <body>
