--- a/menu2.html
+++ b/menu2.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title>Le délice des sens</title>
+    <title>La note enchantée</title>
     <meta charset="UTF-8">
     <meta name="description" content="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,8 @@
     <link rel="icon" href="/MaquettesOhmyfood/images/logo/ohmyfood@2x.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style/css/menu.css">
+    <link rel="stylesheet" href="/sass/css/menu.css">
+
 </head>
 
 <body>
@@ -21,27 +22,26 @@
         <a href="/index.html">
             <p class="header-p">Ohmyfood</p>
         </a>
+
     </header>
 
-    <img class="header-image"
-        src="/MaquettesOhmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-        alt="Le délice des sens">
+    <img class="header-image" src="/MaquettesOhmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+        alt=" La note enchantée">
 
     <main>
         <div class="main-titre-coeur">
-            <h1>Le délice des sens</h1>
+            <h1>La note enchantée</h1>
             <i class="far fa-heart"></i>
         </div>
         <!-- section entrée -->
         <section class="section-entree">
             <div class="article">
-
                 <h3>Entrées</h3>
                 <article class="menu-content delay-1">
                     <div class="menu-content-titre">
-                        <h4>Tartare de thon</h4>
+                        <h4>Ravioles de foie gras </h4>
                         <div class="entree">
-                            <p>Assaisonné au yuzu </p>
+                            <p>Accompagnés de leur crème à la truffe</p>
                             <p class="prix">25€</p>
                         </div>
                     </div>
@@ -52,9 +52,9 @@
 
                 <article class="menu-content delay-2">
                     <div class="menu-content-titre">
-                        <h4>Bouchée de homard croustillant </h4>
+                        <h4>Caviar osciètre </h4>
                         <div class="entree">
-                            <p>Et sa farandole de petits légumes</p>
+                            <p>Sur blini à la farine de blé noir</p>
                             <p class="prix">35€</p>
                         </div>
                     </div>
@@ -65,10 +65,23 @@
 
                 <article class="menu-content delay-3">
                     <div class="menu-content-titre">
-                        <h4>Velouté de cèpes </h4>
+                        <h4>Homard et espuma de potiron </h4>
                         <div class="entree">
-                            <p>Aux truffes </p>
+                            <p>Mariné aux zestes d'orange </p>
                             <p class="prix">20€</p>
+                        </div>
+                    </div>
+                    <div class=" cross ">
+                        <span> <i class=" fas fa-check-circle fa-2x "> </i> </span>
+                    </div>
+                </article>
+
+                <article class="menu-content delay-4">
+                    <div class="menu-content-titre">
+                        <h4>Foie gras de canard cuit entier</h4>
+                        <div class="entree">
+                            <p>Confiture de figue et pain toasté </p>
+                            <p class="prix">35€</p>
                         </div>
                     </div>
                     <div class=" cross ">
@@ -84,25 +97,12 @@
             <div class="article">
 
                 <h3>Plats</h3>
-                <article class="menu-content delay-4">
-                    <div class="menu-content-titre">
-                        <h4>Poulet rôti aux herbes de Provence </h4>
-                        <div class="plat">
-                            <p>Et sa crème de truffe</p>
-                            <p class="prix">40€</p>
-                        </div>
-                    </div>
-                    <div class=" cross ">
-                        <span> <i class=" fas fa-check-circle fa-2x "> </i> </span>
-                    </div>
-                </article>
-
                 <article class="menu-content delay-5">
                     <div class="menu-content-titre">
-                        <h4>Langouste rôtie </h4>
+                        <h4>Noix de coquilles Saint-Jacques</h4>
                         <div class="plat">
-                            <p>Et ses légumes de saison</p>
-                            <p class="prix">35€</p>
+                            <p>Sur lit de purée de céleri-rave</p>
+                            <p class="prix">40€</p>
                         </div>
                     </div>
                     <div class=" cross ">
@@ -112,9 +112,22 @@
 
                 <article class="menu-content delay-6">
                     <div class="menu-content-titre">
-                        <h4>Côte de boeuf Angus </h4>
+                        <h4>Langoustine poêlée</h4>
                         <div class="plat">
-                            <p>Et sa purée de panais</p>
+                            <p>Purée de patate douce</p>
+                            <p class="prix">35€</p>
+                        </div>
+                    </div>
+                    <div class=" cross ">
+                        <span> <i class=" fas fa-check-circle fa-2x "> </i> </span>
+                    </div>
+                </article>
+
+                <article class="menu-content delay-7">
+                    <div class="menu-content-titre">
+                        <h4>Mijoté de queue de boeuf </h4>
+                        <div class="plat">
+                            <p>Et riz sauvage aux zestes de citron</p>
                             <p class="prix">44€</p>
                         </div>
                     </div>
@@ -134,24 +147,25 @@
             <div class="article">
 
                 <h3>Desserts</h3>
-                <article class="menu-content delay-7">
+                <article class="menu-content delay-8">
                     <div class="menu-content-titre">
-                        <h4>Farandole de desserts</h4>
+                        <h4>Macaron noisette et chocolat</h4>
                         <div class="dessert">
-                            <p>Du chef</p>
+                            <p>Glace au caramel brun et sel de Guérande</p>
                             <p class="prix">18€</p>
                         </div>
                     </div>
                     <div class=" cross ">
                         <span> <i class=" fas fa-check-circle fa-2x "> </i> </span>
                     </div>
+
                 </article>
 
-                <article class="menu-content delay-8">
+                <article class="menu-content delay-9">
                     <div class="menu-content-titre">
-                        <h4>Crème brulée </h4>
+                        <h4>Baba au rhum revisité </h4>
                         <div class="dessert">
-                            <p>Revisitée</p>
+                            <p>Avec son coulis de citron</p>
                             <p class="prix">22€</p>
                         </div>
                     </div>
@@ -160,11 +174,11 @@
                     </div>
                 </article>
 
-                <article class="menu-content delay-9">
+                <article class="menu-content delay-10">
                     <div class="menu-content-titre">
-                        <h4>Tiramisu </h4>
+                        <h4>Tarte au citron meringuée </h4>
                         <div class="dessert">
-                            <p>À la noisette</p>
+                            <p>Déstructurée</p>
                             <p class="prix">23€</p>
                         </div>
                     </div>
@@ -188,9 +202,14 @@
                 <li> <a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
                 <li><a href="#">Mentions légales</a></li>
                 <li><a href="mailto:ohmyfood-contact@gmail.com">Contact</a></li>
-
             </ul>
         </footer>
+
+
+
+
+
+
     </main>
 </body>
 
