--- a/menu3.html
+++ b/menu3.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title>La note enchantée</title>
+    <title>À la française</title>
     <meta charset="UTF-8">
     <meta name="description" content="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,9 @@
     <link rel="icon" href="/MaquettesOhmyfood/images/logo/ohmyfood@2x.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style/css/menu.css">
+    <link rel="stylesheet" href="/sass/css/menu.css">
+
+
 </head>
 
 <body>
@@ -24,23 +26,24 @@
 
     </header>
 
-    <img class="header-image" src="/MaquettesOhmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-        alt=" La note enchantée">
+    <img class="header-image" src="/MaquettesOhmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        alt="À La française">
 
     <main>
         <div class="main-titre-coeur">
-            <h1>La note enchantée</h1>
+            <h1>À la française</h1>
             <i class="far fa-heart"></i>
         </div>
         <!-- section entrée -->
         <section class="section-entree">
             <div class="article">
+
                 <h3>Entrées</h3>
                 <article class="menu-content delay-1">
                     <div class="menu-content-titre">
-                        <h4>Ravioles de foie gras </h4>
+                        <h4>Tartare de poulpe acidulé </h4>
                         <div class="entree">
-                            <p>Accompagnés de leur crème à la truffe</p>
+                            <p>Aux zestes d'orange</p>
                             <p class="prix">25€</p>
                         </div>
                     </div>
@@ -51,9 +54,9 @@
 
                 <article class="menu-content delay-2">
                     <div class="menu-content-titre">
-                        <h4>Caviar osciètre </h4>
+                        <h4>Velouté de légumes d'antan</h4>
                         <div class="entree">
-                            <p>Sur blini à la farine de blé noir</p>
+                            <p>Carotte, panais, topinambour</p>
                             <p class="prix">35€</p>
                         </div>
                     </div>
@@ -64,9 +67,9 @@
 
                 <article class="menu-content delay-3">
                     <div class="menu-content-titre">
-                        <h4>Homard et espuma de potiron </h4>
+                        <h4>Soupe à l'oignon </h4>
                         <div class="entree">
-                            <p>Mariné aux zestes d'orange </p>
+                            <p>Revisitée </p>
                             <p class="prix">20€</p>
                         </div>
                     </div>
@@ -74,21 +77,7 @@
                         <span> <i class=" fas fa-check-circle fa-2x "> </i> </span>
                     </div>
                 </article>
-
-                <article class="menu-content delay-4">
-                    <div class="menu-content-titre">
-                        <h4>Foie gras de canard cuit entier</h4>
-                        <div class="entree">
-                            <p>Confiture de figue et pain toasté </p>
-                            <p class="prix">35€</p>
-                        </div>
-                    </div>
-                    <div class=" cross ">
-                        <span> <i class=" fas fa-check-circle fa-2x "> </i> </span>
-                    </div>
-                </article>
             </div>
-
         </section>
 
         <!-- section plats -->
@@ -96,12 +85,25 @@
             <div class="article">
 
                 <h3>Plats</h3>
+                <article class="menu-content delay-4">
+                    <div class="menu-content-titre">
+                        <h4>Coquilles Saint-Jacques</h4>
+                        <div class="plat">
+                            <p>Accompagnées d'une purée de panais</p>
+                            <p class="prix">40€</p>
+                        </div>
+                    </div>
+                    <div class=" cross ">
+                        <span> <i class=" fas fa-check-circle fa-2x "> </i> </span>
+                    </div>
+                </article>
+
                 <article class="menu-content delay-5">
                     <div class="menu-content-titre">
-                        <h4>Noix de coquilles Saint-Jacques</h4>
+                        <h4>Magret de canard</h4>
                         <div class="plat">
-                            <p>Sur lit de purée de céleri-rave</p>
-                            <p class="prix">40€</p>
+                            <p>Et parmentier de pommes de terre</p>
+                            <p class="prix">35€</p>
                         </div>
                     </div>
                     <div class=" cross ">
@@ -111,22 +113,9 @@
 
                 <article class="menu-content delay-6">
                     <div class="menu-content-titre">
-                        <h4>Langoustine poêlée</h4>
+                        <h4>Pigeonneau d’Ille-et-Vilaine </h4>
                         <div class="plat">
-                            <p>Purée de patate douce</p>
-                            <p class="prix">35€</p>
-                        </div>
-                    </div>
-                    <div class=" cross ">
-                        <span> <i class=" fas fa-check-circle fa-2x "> </i> </span>
-                    </div>
-                </article>
-
-                <article class="menu-content delay-7">
-                    <div class="menu-content-titre">
-                        <h4>Mijoté de queue de boeuf </h4>
-                        <div class="plat">
-                            <p>Et riz sauvage aux zestes de citron</p>
+                            <p>Sur son lit de gnocchis aux légumes</p>
                             <p class="prix">44€</p>
                         </div>
                     </div>
@@ -146,25 +135,24 @@
             <div class="article">
 
                 <h3>Desserts</h3>
-                <article class="menu-content delay-8">
+                <article class="menu-content delay-7">
                     <div class="menu-content-titre">
-                        <h4>Macaron noisette et chocolat</h4>
+                        <h4>Pétales de violettes glacés</h4>
                         <div class="dessert">
-                            <p>Glace au caramel brun et sel de Guérande</p>
+                            <p>Et purée de noisettes</p>
                             <p class="prix">18€</p>
                         </div>
                     </div>
                     <div class=" cross ">
                         <span> <i class=" fas fa-check-circle fa-2x "> </i> </span>
                     </div>
-
                 </article>
 
-                <article class="menu-content delay-9">
+                <article class="menu-content delay-8">
                     <div class="menu-content-titre">
-                        <h4>Baba au rhum revisité </h4>
+                        <h4>Fondant au chocolat</h4>
                         <div class="dessert">
-                            <p>Avec son coulis de citron</p>
+                            <p>Revisité</p>
                             <p class="prix">22€</p>
                         </div>
                     </div>
@@ -173,11 +161,11 @@
                     </div>
                 </article>
 
-                <article class="menu-content delay-10">
+                <article class="menu-content delay-9">
                     <div class="menu-content-titre">
-                        <h4>Tarte au citron meringuée </h4>
+                        <h4>Millefeuille croustillant</h4>
                         <div class="dessert">
-                            <p>Déstructurée</p>
+                            <p>Myrtilles et pâte d’amande</p>
                             <p class="prix">23€</p>
                         </div>
                     </div>
@@ -201,6 +189,7 @@
                 <li> <a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
                 <li><a href="#">Mentions légales</a></li>
                 <li><a href="mailto:ohmyfood-contact@gmail.com">Contact</a></li>
+
             </ul>
         </footer>
 
