--- a/menu1.html
+++ b/menu1.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title>À la française</title>
+    <title>La palette du goût</title>
     <meta charset="UTF-8">
     <meta name="description" content="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,71 +11,74 @@
     <link rel="icon" href="/MaquettesOhmyfood/images/logo/ohmyfood@2x.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/css/menu.css">
-
-
+    <link rel="stylesheet" href="./sass/css/menu.css">
 </head>
 
 <body>
     <header>
-        <a href="/index.html" class="header-bouton"><i class="fas fa-arrow-left"></i></a>
-
-        <a href="/index.html">
+        <a href="index.html" class="header-bouton"><i class="fas fa-arrow-left"></i></a>
+        <a href="index.html">
             <p class="header-p">Ohmyfood</p>
         </a>
 
     </header>
 
-    <img class="header-image" src="/MaquettesOhmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-        alt="À La française">
+    <img class="header-image" src="./MaquettesOhmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+        alt="">
 
     <main>
         <div class="main-titre-coeur">
-            <h1>À la française</h1>
-            <i class="far fa-heart"></i>
+            <h1>La palette du goût</h1>
+            <i class="far fa-heart "></i>
         </div>
+
         <!-- section entrée -->
         <section class="section-entree">
             <div class="article">
-
                 <h3>Entrées</h3>
                 <article class="menu-content delay-1">
                     <div class="menu-content-titre">
-                        <h4>Tartare de poulpe acidulé </h4>
+                        <h4>Fricassée d'escargot</h4>
                         <div class="entree">
-                            <p>Aux zestes d'orange</p>
+                            <p>Au piment d'Espelette </p>
                             <p class="prix">25€</p>
+
                         </div>
                     </div>
                     <div class=" cross ">
                         <span> <i class=" fas fa-check-circle fa-2x "> </i> </span>
                     </div>
+
                 </article>
 
                 <article class="menu-content delay-2">
                     <div class="menu-content-titre">
-                        <h4>Velouté de légumes d'antan</h4>
+                        <h4>Foie gras de canard mi-cuit</h4>
                         <div class="entree">
-                            <p>Carotte, panais, topinambour</p>
+                            <p>Et ses copeaux de truffe noire</p>
                             <p class="prix">35€</p>
+
                         </div>
                     </div>
                     <div class=" cross ">
                         <span> <i class=" fas fa-check-circle fa-2x "> </i> </span>
                     </div>
+
                 </article>
 
                 <article class="menu-content delay-3">
                     <div class="menu-content-titre">
-                        <h4>Soupe à l'oignon </h4>
+                        <h4>Oeuf au plat</h4>
                         <div class="entree">
-                            <p>Revisitée </p>
+                            <p>Assaisonné à la truffe sur lit de caviar</p>
                             <p class="prix">20€</p>
+
                         </div>
                     </div>
                     <div class=" cross ">
                         <span> <i class=" fas fa-check-circle fa-2x "> </i> </span>
                     </div>
+
                 </article>
             </div>
         </section>
@@ -83,48 +86,51 @@
         <!-- section plats -->
         <section class="section-plat">
             <div class="article">
-
                 <h3>Plats</h3>
                 <article class="menu-content delay-4">
                     <div class="menu-content-titre">
-                        <h4>Coquilles Saint-Jacques</h4>
+                        <h4>Filet de boeuf aux herbes</h4>
                         <div class="plat">
-                            <p>Accompagnées d'une purée de panais</p>
+                            <p>Accompagné de sa ribambelle de légumes</p>
                             <p class="prix">40€</p>
                         </div>
+
                     </div>
                     <div class=" cross ">
                         <span> <i class=" fas fa-check-circle fa-2x "> </i> </span>
                     </div>
+
                 </article>
 
                 <article class="menu-content delay-5">
                     <div class="menu-content-titre">
-                        <h4>Magret de canard</h4>
+                        <h4>Parmentier de queue de boeuf</h4>
                         <div class="plat">
-                            <p>Et parmentier de pommes de terre</p>
+                            <p>À la truffe noire sur sa purée de panais</p>
                             <p class="prix">35€</p>
                         </div>
                     </div>
                     <div class=" cross ">
                         <span> <i class=" fas fa-check-circle fa-2x "> </i> </span>
                     </div>
+
                 </article>
 
                 <article class="menu-content delay-6">
                     <div class="menu-content-titre">
-                        <h4>Pigeonneau d’Ille-et-Vilaine </h4>
+                        <h4>Filet de turbot</h4>
                         <div class="plat">
-                            <p>Sur son lit de gnocchis aux légumes</p>
+                            <p>Aux agrumes</p>
                             <p class="prix">44€</p>
                         </div>
+
                     </div>
                     <div class=" cross ">
                         <span> <i class=" fas fa-check-circle fa-2x "> </i> </span>
                     </div>
+
                 </article>
             </div>
-
 
         </section>
 
@@ -133,48 +139,50 @@
         <!-- section desserts -->
         <section class="section-dessert">
             <div class="article">
-
                 <h3>Desserts</h3>
                 <article class="menu-content delay-7">
                     <div class="menu-content-titre">
-                        <h4>Pétales de violettes glacés</h4>
+                        <h4>Paris-Brest</h4>
                         <div class="dessert">
-                            <p>Et purée de noisettes</p>
+                            <p>Revisité</p>
                             <p class="prix">18€</p>
                         </div>
                     </div>
                     <div class=" cross ">
                         <span> <i class=" fas fa-check-circle fa-2x "> </i> </span>
                     </div>
+
                 </article>
 
                 <article class="menu-content delay-8">
                     <div class="menu-content-titre">
-                        <h4>Fondant au chocolat</h4>
+                        <h4>Macaron au chocolat d'exception </h4>
                         <div class="dessert">
-                            <p>Revisité</p>
+                            <p>Et glace à la vanille de Madagascar</p>
                             <p class="prix">22€</p>
                         </div>
                     </div>
                     <div class=" cross ">
                         <span> <i class=" fas fa-check-circle fa-2x "> </i> </span>
                     </div>
+
                 </article>
 
                 <article class="menu-content delay-9">
                     <div class="menu-content-titre">
-                        <h4>Millefeuille croustillant</h4>
+                        <h4>Mousse au chocolat </h4>
                         <div class="dessert">
-                            <p>Myrtilles et pâte d’amande</p>
+                            <p>Au piment d'Espelette et à la truffe noire</p>
                             <p class="prix">23€</p>
                         </div>
+
                     </div>
                     <div class=" cross ">
                         <span> <i class=" fas fa-check-circle fa-2x "> </i> </span>
                     </div>
+
                 </article>
             </div>
-
         </section>
 
         <div class="bouton">
@@ -189,6 +197,7 @@
                 <li> <a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
                 <li><a href="#">Mentions légales</a></li>
                 <li><a href="mailto:ohmyfood-contact@gmail.com">Contact</a></li>
+
 
             </ul>
         </footer>
