--- a/menu4.html
+++ b/menu4.html
@@ -11,21 +11,21 @@
     <link rel="icon" href="/MaquettesOhmyfood/images/logo/ohmyfood@2x.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/css/menu.css">
+    <link rel="stylesheet" href="./sass/css/menu.css">
 
 </head>
 
 <body>
     <header>
-        <a href="/index.html" class="header-bouton"><i class="fas fa-arrow-left"></i></a>
+        <a href="index.html" class="header-bouton"><i class="fas fa-arrow-left"></i></a>
 
-        <a href="/index.html">
+        <a href="index.html">
             <p class="header-p">Ohmyfood</p>
         </a>
     </header>
 
     <img class="header-image"
-        src="/MaquettesOhmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+        src="./MaquettesOhmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
         alt="Le délice des sens">
 
     <main>
