--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="MaquettesOhmyfood/images/logo/ohmyfood@2x.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/css/main.css" />
+    <link rel="stylesheet" href="./sass/css/main.css" />
 </head>
 
 
@@ -78,7 +78,7 @@
         <section class="restaurantssection">
             <h2>Restaurants</h2>
 
-            <a href="menu/menu1.html">
+            <a href="menu1.html">
                 <article class="menu1et2">
                     <img src="MaquettesOhmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                         alt="La palette du goût">
@@ -97,7 +97,7 @@
             </a>
 
 
-            <a href="menu/menu2.html">
+            <a href="menu2.html">
                 <article class="menu1et2">
                     <img class="image2" src="MaquettesOhmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                         alt="La note enchantée">
@@ -117,7 +117,7 @@
                 </article>
             </a>
 
-            <a href="menu/menu3.html">
+            <a href="menu3.html">
                 <article class="menu3et4">
                     <img src="MaquettesOhmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                         alt="À La française">
@@ -135,7 +135,7 @@
                 </article>
             </a>
 
-            <a href="menu/menu4.html">
+            <a href="menu4.html">
                 <article class="menu3et4">
                     <img src="MaquettesOhmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                         alt="Le délice des sens">
