--- a/menu1.html
+++ b/menu1.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="https://kit.fontawesome.com/031c499325.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/MaquettesOhmyfood/images/logo/ohmyfood@2x.svg" />
+    <link rel="icon" href="./MaquettesOhmyfood/images/logo/ohmyfood@2x.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./sass/css/menu.css">
